<resources>
    <string name="app_name">Hangman game</string>

    <string name="woord">Woord</string>
    <string name="lose">You Lose!!</string>
    <string name="win">You Win!!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonTextA">A</string>
    <string name="buttonTextE">E</string>
    <string name="buttonTextI">I</string>
    <string name="buttonTextO">O</string>
    <string name="buttonTextU">U</string>
</resources>
